# yazecminerexplaned

c/: CMakeLists.txt  equihash.c  mainer.c
js-backend/: server.pl
js-backend/lib/AnyEvent/: constants.pl
